<resources>
    <string name="app_name">FickleFlight</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="paris">Paris</string>
    <string name="_1299">$1299</string>
    <string name="offers">Offers</string>
    <string name="profile">Profile</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="background">background</string>
    <string name="from">FROM</string>
    <string name="i_like_the_beach_mountains_forest_and_everything_about_nature">I like the beach, mountains, forest and everything about nature! :)</string>
    <string name="baguio_philippines">Baguio, Philippines</string>
    <string name="macy_johnson">Macy Johnson</string>
    <string name="text_content">Text Content</string>
    <string name="background_image_boracay">background_image_boracay</string>
    <string name="tittle_boracay">tittle_boracay</string>
    <string name="country">country</string>
    <string name="modo_oscuro">Modo Oscuro</string>
    <string name="generales">Generales</string>
    <string name="version">App version 0.0.1</string>
    <string name="notification">Notification</string>
    <string name="help">Get Help</string>
    <string name="calendar">Calendar</string>
    <string name="settings">Settings</string>
    <string name="greeting">Hello</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="fragment_tittle">Fragment Title</string>
    <string name="kebab">kebab icon</string>
    <string name="depeartureAirportString">EZE</string>
    <string name="arrivalAirportString">LAX</string>
    <string name="depeartureDateString">29 July, 2022</string>
    <string name="explore">Explore</string>
    <string name="todo">TODO</string>
    <string name="flight">Flight</string>
    <string name="trending_destinations">Trending Destinations</string>
    <string name="text_discount">50% discount for VIP users</string>
    <string name="oneWayText">One Way</string>
    <string name="roundTrip">Round trip</string>
    <string name="formDepartureText">From</string>
    <string name="formArrivalText">To</string>
    <string name="formDepartureDateText">Departure Date</string>
    <string name="formPassengersText">Passengers</string>
    <string name="formClassText">Class</string>
    <string name="searchFlightButton">Search</string>
</resources>
