<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/profile_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_bold"
        android:text="@string/macy_johnson"
        android:textColor="@color/flight_text"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/profile_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_regular"
        android:text="@string/baguio_philippines"
        android:textColor="@color/bottom_bar_inactive"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/profile_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/inter_regular"
        android:text="@string/i_like_the_beach_mountains_forest_and_everything_about_nature"
        android:textColor="@color/flight_text"
        android:textSize="16sp" />

</LinearLayout>